# JEPA_ASM

./: .gitignore  results_mask15.md
jepa-ir/: .gitignore  README.md  pyproject.toml
jepa-ir/docs/: ir_to_graph.md  limitation_non_bijective.md  pitch.md  predictor_per_step_analysis.md  results_mask15.md  slides.tex
jepa-ir/examples/: demo_oral.c
jepa-ir/examples/mini_corpus/: f1.c  f2.c  f3.c  f4.c  f5.c  f6.c  mem_ops.c  sum_array.c
jepa-ir/scripts/: build_graphs.py  build_predictor_graphs.py  compare_runs.py  dalia_100k.slurm  dalia_200k.slurm  dalia_ablation.slurm  dalia_big.slurm  dalia_big2.slurm  dalia_big512.slurm  dalia_edgemask.slurm  dalia_encoder.slurm  dalia_encoder2.slurm  dalia_mask15.slurm  dalia_train.slurm  eval_predictor_per_step.py  fetch_anghabench.py  inspect_graph.py  make_all_figures.py  make_slide.py  measure_o0_o3.py  plot_graph.py  precompute_embeddings.py  probe_masking.py  probe_masking_sweep.py  train.py  train_predictor.py  train_predictor_chain.py
jepa-ir/src/jepa_ir/: __init__.py  config.py
jepa-ir/src/jepa_ir.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
jepa-ir/src/jepa_ir/data/: __init__.py  convert.py  dataset.py  masking.py  splits.py
jepa-ir/src/jepa_ir/eval/: __init__.py  collapse.py
jepa-ir/src/jepa_ir/graph/: __init__.py  builder.py  schema.py
jepa-ir/src/jepa_ir/ir/: __init__.py  compile.py
jepa-ir/src/jepa_ir/model/: __init__.py  encoder.py  jepa.py  predictor.py
jepa-ir/src/jepa_ir/train/: __init__.py  loop.py  vicreg.py
jepa-ir/tests/: test_pipeline.py
(+27 files in other folders)
